--- a/line/index.html
+++ b/line/index.html
@@ -240,40 +240,38 @@ title: Math, Sonification, Plots
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
-    <div class="center fit myContainer">
-        <img id="lineNeg" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
-             title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
+    <img id="lineNeg" class="center" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
+         title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
-        <script>
-            function change() {
-                var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
-                    img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
-                var imgElement = document.getElementById('lineNeg');
-                imgElement.src = (imgElement.src === img1)? img2 : img1;
-            }
+    <script>
+        function change() {
+            var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
+                img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+            var imgElement = document.getElementById('lineNeg');
+            imgElement.src = (imgElement.src === img1)? img2 : img1;
+        }
 
-            var gtech = document.getElementById("gtech");
-            var lineNeg = document.getElementById("lineNeg");
-            function setBG_Black() {
-                document.getElementById("myAnimation").style.backgroundColor = "yellow";
-                document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
-                document.body.style.color = "yellow";
-                gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-                lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
-            }
-            function setBG_White() {
-                document.getElementById("myAnimation").style.backgroundColor = "black";
-                document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
-                document.body.style.color = "black";
-                gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-                lineNeg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
-            }
-        </script>
+        var gtech = document.getElementById("gtech");
+        var lineNeg = document.getElementById("lineNeg");
+        function setBG_Black() {
+            document.getElementById("myAnimation").style.backgroundColor = "yellow";
+            document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+            document.body.style.color = "yellow";
+            gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+            lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+        }
+        function setBG_White() {
+            document.getElementById("myAnimation").style.backgroundColor = "black";
+            document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+            document.body.style.color = "black";
+            gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+            lineNeg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
+        }
+    </script>
 
-        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
-        <!-- div class="tracePlot"></div -->
-        <div id ="myAnimation"></div>
-    </div>
+    <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
+    <!-- div class="tracePlot"></div -->
+    <div id ="myAnimation"></div>
 
     <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
     <button class="play" onclick="play(this)">SONIFICATION</button>
