--- a/line/index.html
+++ b/line/index.html
@@ -199,7 +199,7 @@ title: Math, Sonification, Plots
         /* Standard syntax */
         @keyframes tracePlt {
             0%   {left:285px; top:490px;}
-            100% {left:800px; top:899px;}
+            100% {left:800px; top:905px;}
         }
 
         /*
@@ -240,7 +240,8 @@ title: Math, Sonification, Plots
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
-    <img id="lineNeg" class="center" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
+    <img id="lineNeg" class="center" style="width:800px;height:600px"
+         src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
          title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
     <script>
