--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -158,25 +158,29 @@ title: Math, Sonification, Plots
                 -o-animation-play-state:paused;
                 animation-play-state:paused;
 
-                -webkit-animation-name: tracePlt;             /* Safari 4.0 - 8.0 */
+                -webkit-animation-name: tracePlt;            /* Safari 4.0 - 8.0 */
                 -webkit-animation-duration: 5s;              /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
                 -webkit-animation-direction: normal;         /* Safari 4.0 - 8.0 */
+                -webkit-transition-timing-function: linear;  /* Safari 4.0 - 8.0 */
 
                 -moz-animation-name: tracePlt;
                 -moz-animation-duration: 5s;
                 -moz-animation-iteration-count: infinite;
                 -moz-animation-direction: normal;
+                -moz-transition-timing-function: linear;
 
                 -o-animation-name: tracePlt;
                 -o-animation-duration: 5s;
                 -o-animation-iteration-count: infinite;
                 -o-animation-direction: normal;
+                -o-transition-timing-function: linear;
 
                 animation-name: tracePlt;
                 animation-duration: 5s;
                 animation-iteration-count: infinite;
                 animation-direction: normal;
+                transition-timing-function: linear;
         }
 
         /* Safari 4.0 - 8.0 */
@@ -194,8 +198,8 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            0%   {left:285px; top:490px;}
+            100% {left:808px; top:895px;}
         }
 
         /*
@@ -230,46 +234,45 @@ title: Math, Sonification, Plots
 <body>
     <br><br>
     <nav><ul>
-        <li><a href="/line" target="_HCS">NEG SLOPE</a></li>
-        <li><a href="/circle" target="_HCS">POS SLOPE</a></li>
-        <li><a href="/parabola" target="_HCS">ZERO SLOPE</a></li>
+        <li><a href="." target="_self">NEG SLOPE</a></li>
+        <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
+        <li><a href="/parabola" target="_self">ZERO SLOPE</a></li>
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
-    <div class="center fit myContainer">
-        <img id="lineNeg" class="center fit myContainer" src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
-             title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
+    <img id="lineNeg" class="center" style="width:800px;height:600px"
+         src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
+         title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
-        <script>
-            function change() {
-                var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
-                    img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
-                var imgElement = document.getElementById('lineNeg');
-                imgElement.src = (imgElement.src === img1)? img2 : img1;
-            }
+    <script>
+        function change() {
+            var img1 = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png",
+                img2 = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+            var imgElement = document.getElementById('lineNeg');
+            imgElement.src = (imgElement.src === img1)? img2 : img1;
+        }
 
-            var gtech = document.getElementById("gtech");
-            var lineNeg = document.getElementById("lineNeg");
-            function setBG_Black() {
-                document.getElementById("myAnimation").style.backgroundColor = "yellow";
-                document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
-                document.body.style.color = "yellow";
-                gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-                lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
-            }
-            function setBG_White() {
-                document.getElementById("myAnimation").style.backgroundColor = "black";
-                document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
-                document.body.style.color = "black";
-                gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-                lineNeg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
-            }
-        </script>
+        var gtech = document.getElementById("gtech");
+        var lineNeg = document.getElementById("lineNeg");
+        function setBG_Black() {
+            document.getElementById("myAnimation").style.backgroundColor = "yellow";
+            document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+            document.body.style.color = "yellow";
+            gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+            lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+        }
+        function setBG_White() {
+            document.getElementById("myAnimation").style.backgroundColor = "black";
+            document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+            document.body.style.color = "black";
+            gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+            lineNeg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
+        }
+    </script>
 
-        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
-        <!-- div class="tracePlot"></div -->
-        <div id ="myAnimation"></div>
-    </div>
+    <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
+    <!-- div class="tracePlot"></div -->
+    <div id ="myAnimation"></div>
 
     <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
     <button class="play" onclick="play(this)">SONIFICATION</button>
@@ -292,6 +295,7 @@ title: Math, Sonification, Plots
 
                 function play(button) {
                         var elem = document.getElementById("myAnimation");
+                        var newone = elem.cloneNode(true);
                         var audio = document.getElementById("audio");
                         // document.getElementById("myAnimation").style.animationDuration = audio.duration + "s";
                         elem.style.animationDuration = audio.duration + "s";
@@ -304,6 +308,7 @@ title: Math, Sonification, Plots
                                 elem.style.oAnimationPlayState = 'paused';
                                 elem.style.mozAnimationPlayState = 'paused';
                                 elem.style.webkitAnimationPlayState = 'paused';
+                                elem.parentNode.replaceChild(newone, elem);
 
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
