--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -240,7 +240,7 @@ title: Math, Sonification, Plots
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
-    <img id="lineNeg" class="center" style="width:800px;height:600px"
+    <img id="line" class="center" style="width:800px;height:600px"
          src="https://rbobkoskie3.github.io/images/ST_Neg_Line.png"
          title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
@@ -253,7 +253,7 @@ title: Math, Sonification, Plots
         }
 
         var gtech = document.getElementById("gtech");
-        var lineNeg = document.getElementById("lineNeg");
+        var lineNeg = document.getElementById("line");
         function setBG_Black() {
             document.getElementById("myAnimation").style.backgroundColor = "yellow";
             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
