--- a/line/index.html
+++ b/line/index.html
@@ -236,7 +236,7 @@ title: Math, Sonification, Plots
     <nav><ul>
         <li><a href="." target="_self">NEG SLOPE</a></li>
         <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
-        <li><a href="/parabola" target="_self">ZERO SLOPE</a></li>
+        <li><a href="/line/lineZeroSlope.html" target="_self">ZERO SLOPE</a></li>
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
