--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -234,9 +234,9 @@ title: Math, Sonification, Plots
 <body>
     <br><br>
     <nav><ul>
-        <li><a href="." target="_self">NEG SLOPE</a></li>
-        <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
-        <li><a href="/parabola" target="_self">ZERO SLOPE</a></li>
+        <li><a href="/line" target="_self">NEG SLOPE</a></li>
+        <li><a href="." target="_self">POS SLOPE</a></li>
+        <li><a href="/line/lineZeroSlope.html" target="_self">ZERO SLOPE</a></li>
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
