--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -235,7 +235,7 @@ title: Math, Sonification, Plots
     <br><br>
     <nav><ul>
         <li><a href="/line" target="_self">NEG SLOPE</a></li>
-        <li><a href="." target="_self">POS SLOPE</a></li>
+        <li><a href="/line/linePosSlope.html" target="_self">POS SLOPE</a></li>
         <li><a href="/line/lineZeroSlope.html" target="_self">ZERO SLOPE</a></li>
     </ul></nav>
 
