--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -198,8 +198,10 @@ title: Math, Sonification, Plots
         }
         /* Standard syntax */
         @keyframes tracePlt {
-            0%   {left:285px; top:490px;}
-            100% {left:808px; top:895px;}
+            // 0%   {left:285px; top:490px;}
+            0%   {left:285px; top:895px;}
+            100% {left:808px; top:490px;}
+            // 100% {left:808px; top:895px;}
         }
 
         /*
