--- a/line/lineZeroSlope.html
+++ b/line/lineZeroSlope.html
@@ -185,16 +185,16 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%   {left:285px; top:900px;}
-            100% {left:808px; top:495px;}
+            0%   {left:20px; top:0px;}
+            100% {left:790px; top:600px;}
         }
         @-moz-keyframes tracePlt {
-            0%   {left:285px; top:900px;}
-            100% {left:808px; top:495px;}
+            0%   {left:20px; top:0px;}
+            100% {left:790px; top:600px;}
         }
         @-o-keyframes tracePlt {
-            0%   {left:285px; top:900px;}
-            100% {left:808px; top:495px;}
+            0%   {left:20px; top:0px;}
+            100% {left:790px; top:600px;}
         }
         /* Standard syntax */
         @keyframes tracePlt {
@@ -241,13 +241,13 @@ title: Math, Sonification, Plots
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <img id="line" class="center" style="width:800px;height:600px"
-         src="https://rbobkoskie3.github.io/images/ST_Pos_Line.png"
+         src="https://rbobkoskie3.github.io/images/ST_Hrz_Line.png"
          title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
 
     <script>
         function change() {
-            var img1 = "https://rbobkoskie3.github.io/images/ST_Pos_Line.png",
-                img2 = "https://rbobkoskie3.github.io/images/HC_Pos_Line.png";
+            var img1 = "https://rbobkoskie3.github.io/images/ST_Hrz_Line.png",
+                img2 = "https://rbobkoskie3.github.io/images/HC_Hrz_Line.png";
             var imgElement = document.getElementById('line');
             imgElement.src = (imgElement.src === img1)? img2 : img1;
         }
@@ -259,18 +259,18 @@ title: Math, Sonification, Plots
             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
             document.body.style.color = "yellow";
             gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-            line.src = "https://rbobkoskie3.github.io/images/HC_Pos_Line.png";
+            line.src = "https://rbobkoskie3.github.io/images/HC_Hrz_Line.png";
         }
         function setBG_White() {
             document.getElementById("myAnimation").style.backgroundColor = "black";
             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
             document.body.style.color = "black";
             gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-            line.src = "https://rbobkoskie3.github.io/images/ST_Pos_Line.png";
+            line.src = "https://rbobkoskie3.github.io/images/ST_Hrz_Line.png";
         }
     </script>
 
-    <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_pos.mp4"></audio>
+    <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_hrz.mp4"></audio>
     <!-- div class="tracePlot"></div -->
     <div id ="myAnimation"></div>
 
