--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@ title: Math, Sonification, Plots
     </style>
 </head>
 
-<div class="math_class">
-
+<body>
 	<!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
         <h1>About the Project</h1>
         <div><p>
            This website is part of a human factors study to improve ergonomics for the visually impaired.
            The concept originates from a
            <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology"
-           target="_HCS">CS 6460: Educational Technology</a>
+           target="_blank">CS 6460: Educational Technology</a>
            class project. In addition to this website, I have built a
            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
-           target="_HCS">survey</a>
+           target="_blank">survey</a>
            to gather information on the High Contrast Settings and Sonification implemented on the website.
         </p></div>
         <div><p>
            I encourage visitors to peruse the Math Plots: LINES, CIRCLES, PARABOLAS, HYPERBOLAS, and play with the
            High Contrast Settings and Sonification. Please provide comments and suggestions, and following your visit, kindly take the
            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
-           target="_HCS">survey</a>.
+           target="_blank">survey</a>.
         </p></div>
 
         <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
-        <img id="hyperbola" class="center fit" src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
+        <img id="hyperbola" class="center fit" style="width:600px;height:600px"
+             src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
         <script>
             function change() {
@@ -69,4 +69,4 @@ title: Math, Sonification, Plots
                 hyperbola.src = "https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png";
             }                
         </script>
-</div>
+</body>
