--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@ title: Math, Sonification, Plots
 </head>
 
 <body>
-	<!-- img class="center fit" style="width:800px;height:600px"
-	src="\images\ST_3D_Hyperbola.png"
-	title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
+	<!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
         <h1>About the Project</h1>
         <div><p>
            This website is part of a human factors study to improve ergonomics for the visually impaired.
