--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Math, Sonification, Plots
         </p></div>
 
         <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
-        <img id="hyperbola" class="center fit" style="width:600px;height:600px"
+        <img id="hyperbola" class="center fit"
              src="https://rbobkoskie3.github.io/images/ST_3D_Hyperbola.png"
              title="Click on Image to Toggle Between High Contrast <> Standard Contrast" onclick = "change();"/>
         <script>
