--- a/parabola/index.html
+++ b/parabola/index.html
@@ -235,7 +235,7 @@ title: Math, Sonification, Plots
     <br><br>
     <nav><ul>
         <li><a href="." target="_self">NEG SLOPE</a></li>
-        <li><a href="/line/parabolaPosSlope.html" target="_self">POS SLOPE</a></li>
+        <li><a href="/parabola/parabolaPosSlope.html" target="_self">POS SLOPE</a></li>
     </ul></nav>
 
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
