--- a/fixes/index.html
+++ b/fixes/index.html
@@ -113,7 +113,7 @@ title: Math, Sonification, Plots
                 text-justify: inter-word;
         }
 
-        .fit, #myContainer {  /* set relative picture size */
+        .fit {  /* set relative picture size */
                 max-width: 100%;
                 max-height: 100%;
         }
@@ -270,11 +270,10 @@ title: Math, Sonification, Plots
             }
         </script>
 
-        <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
-        <!-- div class="tracePlot"></div -->
         <div id ="myAnimation"></div>
     </div>
 
+    <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
     <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
     <button class="play" onclick="play(this)">SONIFICATION</button>
     <br>
