--- a/line/index.html
+++ b/line/index.html
@@ -199,7 +199,7 @@ title: Math, Sonification, Plots
         /* Standard syntax */
         @keyframes tracePlt {
             0%   {left:20px; top:0px;}
-            100% {left:790px; top:600px;}
+            100% {left:790; top:600;}
         }
 
         /*
